# ViitaCoin

./: Anchor.toml  LICENSE  README.md  VITACOIN_PROJECT_PROFILE.md  VitaCoin_InfoSheet.txt  VitaCoin_Roadmap.txt  VitaCoin_Whitepaper.txt  index.html
app/: next.config.mjs  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: SolanaProvider.tsx
backend/src/routes/: sync.route.ts
backend/src/services/backend/src/services/: plaid.service.ts
programs/vitacoin/: Cargo.toml
programs/vitacoin/src/: lib.rs
whitepaper/: vitacoin-whitepaper.md
