[package]
name = "vitacoin"
version = "0.1.0"
description = "VitaCoin Core Smart Contract Program Package"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.11"
winnow = "=0.6.5"
